add the demo part web design for index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,20 +21,23 @@
     <main>
     <section class="explore">
     <h2>Explore Better Decision Making</h2>
-    <p>See xxx to learn more!</p>
     <p><a href="https://github.com/wang2653/Building-an-Intelligent-Job-Scheduler-for-Optimized-Request-Assignment">Learn more</a></p>
     </section>
 
-    <section>
-    <blockquote>" Your Health, Our Priority "</blockquote>
+    <section class="slogan">
+    <blockquote>" Minimizing Waiting Times, <br> Maximizing Our Care "</blockquote>
     </section>
 
-    <section>
+    <section class="demo">
     <img src="../image/bg2.jpg" alt="Hospital Image">
+    <div class="demo_message">
+    <h2>Demo</h2>
+    <p>Deep RL Model <br> Your gateway to seamless patient management</p>
+    </div>
     </section>
     </main>
     <footer>
-        <p>&copy; 2025 Intelligent Scheduler Project</p>
+        <p>&copy; 2025 Intelligent Scheduler for Emergency Department</p>
     </footer>
 </body>
 </html>
