--- a/static/style.css
+++ b/static/style.css
@@ -36,7 +36,7 @@ header a:hover {
     background-color: antiquewhite;
     color: white;
     height: 85vh;
-    background-image: url("../static/emergency1.jpg");
+    background-image: url("../static/emergency1_dark.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -51,7 +51,7 @@ header a:hover {
 .explore p {
     color: #fef7e6;
     font-size: 18px;
-    margin: 25px 0;
+    margin: 85px 0;
 }
 .explore a {
     color: white;
@@ -59,4 +59,45 @@ header a:hover {
     border: 1px solid #acacac;
     padding: 10px 20px;
     border-radius: 5px;
+}
+.slogan {
+    background-color: #485652;
+    color: white;
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    line-height: 1.8em;
+}
+footer {
+    background-color: #000;
+    color: #b7b7b7;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+}
+.demo {
+    display: flex;
+}
+.demo img {
+    width: 50%;
+}
+.demo_message {
+    width: 50%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.demo_message h2{
+    font-size: 40px;
+    margin-bottom: 30px;
+}
+.demo_message p {
+    text-align: center;
+    line-height: 2em;
 }
