add about section

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
         <li><a href="#">Login</a></li>
     </ul>
     </nav>
@@ -34,6 +34,29 @@
     <h2>Demo</h2>
     <p>Deep RL Model <br> Your gateway to seamless patient management</p>
     </div>
+    </section>
+
+    <section id="contact" class="contact">
+        <div>
+            <img src="../static/momo1.jpeg" alt="Ruoyu's Photo">
+            <h3>Ruoyu Li</h3>
+            <p>Frontend Developer <br> lambert.li@mail.utoronto.ca</p>
+        </div>
+        <div>
+            <img src="../static/momo2.jpeg" alt="Yifan's Photo">
+            <h3>Yifan Wang</h3>
+            <p>Frontend Developer <br> yfan.wang@mail.utoronto.ca</p>
+        </div>
+        <div>
+            <img src="../static/momo3.jpeg" alt="Housen's Photo">
+            <h3>Housen Zhu</h3>
+            <p>Backend Developer <br> benjamin.zhu@mail.utoronto.ca</p>
+        </div>
+        <div>
+            <img src="../static/momo4.jpeg" alt="Yuan's Photo">
+            <h3>Yuan Sui</h3>
+            <p>Backend Developer <br> yuan.sui@mail.utoronto.ca</p>
+        </div>
     </section>
     </main>
     <footer>
