--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,9 @@
     padding: 0;
     margin: 0;
 }
+html {
+    scroll-behavior: smooth;
+}
 header {
     background-color: #231c1a;
     height: 80px;
@@ -67,7 +70,7 @@ header a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
+    font-size: 30px;
     line-height: 1.8em;
 }
 footer {
@@ -94,10 +97,34 @@ footer {
     justify-content: center;
 }
 .demo_message h2{
-    font-size: 40px;
+    font-size: 50px;
     margin-bottom: 30px;
 }
 .demo_message p {
+    font-size: 20px;
     text-align: center;
     line-height: 2em;
+}
+.contact {
+    display: flex;
+    background-color: #ede9db;
+    justify-content: space-between;
+    padding: 100px 100px 80px;
+}
+.contact div {
+    width: 200px;
+    text-align: center;
+}
+.contact img {
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
+}
+.contact h3 {
+    font-size: 20px;
+    margin: 20px 0;
+}
+.contact p {
+    font-size: 14px;
+    line-height: 1.6em;
 }
