--- a/templates/index.html
+++ b/templates/index.html
@@ -11,15 +11,15 @@
     <h1>Intelligent Scheduler for Emergency Department</h1>
     <nav>
     <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#explore">Home</a></li>
+        <li><a href="https://github.com/wang2653/Building-an-Intelligent-Job-Scheduler-for-Optimized-Request-Assignment">About</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="#">Login</a></li>
     </ul>
     </nav>
     </header>
     <main>
-    <section class="explore">
+    <section id="explore" class="explore">
     <h2>Explore Better Decision Making</h2>
     <p><a href="https://github.com/wang2653/Building-an-Intelligent-Job-Scheduler-for-Optimized-Request-Assignment">Learn more</a></p>
     </section>
