--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         <li><a href="#explore">Home</a></li>
         <li><a href="https://github.com/wang2653/Building-an-Intelligent-Job-Scheduler-for-Optimized-Request-Assignment">About</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="#">Login</a></li>
+        <li><a href="/doctor">Login</a></li>
     </ul>
     </nav>
     </header>
