--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     </section>
 
     <section class="demo">
-    <img src="../image/bg2.jpg" alt="Hospital Image">
+    <img src="../static/bg2.jpg" alt="Hospital Image">
     <div class="demo_message">
     <h2>Demo</h2>
     <p>Deep RL Model <br> Your gateway to seamless patient management</p>
