--- a/templates/index.html
+++ b/templates/index.html
@@ -28,13 +28,29 @@
     <blockquote>" Minimizing Waiting Times, <br> Maximizing Our Care "</blockquote>
     </section>
 
-    <section class="demo">
+    <div class="demo-container">
+    <section class="demo demo1">
     <img src="../static/bg2.jpg" alt="Hospital Image">
     <div class="demo_message">
     <h2>Demo</h2>
     <p>Deep RL Model <br> Your gateway to seamless patient management</p>
     </div>
     </section>
+    <section class="demo demo2">
+        <img src="../static/bg2.jpg" alt="Hospital Image">
+        <div class="demo_message">
+        <h2>Demo2</h2>
+        <p>Deep RL Model <br> Your gateway to seamless patient management</p>
+        </div>
+    </section>
+    <section class="demo demo3">
+        <img src="../static/bg2.jpg" alt="Hospital Image">
+        <div class="demo_message">
+        <h2>Demo3</h2>
+        <p>Deep RL Model <br> Your gateway to seamless patient management</p>
+        </div>
+    </section>
+    </div>
 
     <section id="contact" class="contact">
         <div>
