--- a/templates/doc.html
+++ b/templates/doc.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div class="doctor_container">
+<div class="doctor-container">
   <!-- Left Sidebar -->
   <div class="sidebar">
     <h2>Scheduler</h2>
