--- a/static/style.css
+++ b/static/style.css
@@ -3,9 +3,11 @@
     padding: 0;
     margin: 0;
 }
+
 html {
     scroll-behavior: smooth;
 }
+
 header {
     background-color: rgba(35, 28, 26, 0.8);
     height: 80px;
@@ -13,6 +15,7 @@ header {
     position: fixed;
     z-index: 9999;
 }
+
 h1 {
     color: white;
     position: relative;
@@ -20,23 +23,28 @@ h1 {
     top: 0;
     line-height: 80px;
 }
+
 header ul {
     position: absolute;
     right: 5vw;
     top: 0;
     line-height: 80px;
 }
+
 header li {
     display: inline;
     margin-right: 4vw;
 }
+
 header a {
     color: white;
     text-decoration: none;
 }
+
 header a:hover {
     text-decoration: underline;
 }
+
 @keyframes fadeInUp {
     from {
         opacity: 0;
@@ -47,6 +55,7 @@ header a:hover {
         transform: translateY(0);
     }
 }
+
 @keyframes appear {
     from {
         opacity: 0;
@@ -57,6 +66,7 @@ header a:hover {
         transform: translateX(0px);
     }
 }
+
 .explore {
     background-color: antiquewhite;
     color: white;
@@ -71,6 +81,7 @@ header a:hover {
     justify-content: center;
     margin-bottom: 25vh;
 }
+
 .explore h2 {
     font-size: 60px;
     margin-top: 80px;
@@ -78,14 +89,17 @@ header a:hover {
     transform: translateY(20px);
     animation: fadeInUp 4s forwards;
 }
+
 .explore:hover h2 {
     animation-delay: 0.5s;
 }
+
 .explore p {
     color: #fef7e6;
     font-size: 18px;
     margin: 85px 0;
 }
+
 .explore a {
     color: white;
     text-decoration: none;
@@ -103,6 +117,7 @@ footer {
     align-items: center;
     font-size: 14px;
 }
+
 .demo-container {
     height: 200vh;
     position: relative;
@@ -110,6 +125,7 @@ footer {
         url("../static/front_page_2.png") no-repeat center top;
     background-size: cover;
 }
+
 .demo {
     display: flex;
     height: 50vh;
@@ -121,21 +137,26 @@ footer {
     background-color: #000;
     border: 1px solid #ccc;
 }
+
 .demo1 {
     z-index: 1;
     background-color: #f2d388;
 }
+
 .demo2 {
     z-index: 2;
     background-color: #c7efd9;
 }
+
 .demo3 {
     z-index: 3;
     background-color: #fad4d4;
 }
+
 .demo img {
     width: 50%;
 }
+
 .demo_message {
     width: 50%;
     background-color: white;
@@ -144,15 +165,18 @@ footer {
     align-items: center;
     justify-content: center;
 }
+
 .demo_message h2{
     font-size: 50px;
     margin-bottom: 30px;
 }
+
 .demo_message p {
     font-size: 20px;
     text-align: center;
     line-height: 2em;
 }
+
 .contact {
     display: flex;
     background-color: #ede9db;
@@ -162,19 +186,23 @@ footer {
     margin-top: -25vh;
     z-index: 3;
 }
+
 .contact div {
     width: 200px;
     text-align: center;
 }
+
 .contact img {
     width: 100%;
     height: 200px;
     border-radius: 10px;
 }
+
 .contact h3 {
     font-size: 20px;
     margin: 20px 0;
 }
+
 .contact p {
     font-size: 14px;
     line-height: 1.6em;
@@ -182,7 +210,7 @@ footer {
 
 /* Styling for the doc.html*/
 /* Container holds the sidebar and main content side by side */
-.doctor_container {
+.doctor-container {
     display: flex;
     height: 100vh;
     width: 100vw;
@@ -312,4 +340,120 @@ footer {
     .card {
       width: 100%; /* 1 card per row on very small screens */
     }
+}
+
+/* Styling for the login.html*/
+/**/
+/**/
+/**/
+/**/
+.login-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: url(../static/emergency1_dark.jpg) no-repeat;
+    background-size: cover;
+}
+
+.login-box {
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 380px;
+    width: 350px;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    border-right: 1px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(10px);
+    background: rgba(50, 50, 50, 0.3);
+}
+
+.login-box > h2 {
+    color: rgba(255, 255, 255, 0.9);
+    margin-bottom: 20px;
+}
+
+.login-box .input-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    margin-bottom: 10px;
+}
+
+.login-box .input-box > label {
+    margin-bottom: 5px;
+    color: rgba(255, 255, 255, 0.9);
+    font-size: 13px;
+}
+
+.login-body .input-box > input {
+    box-sizing: border-box;
+    color: rgba(255, 255, 255, 0.9);
+    font-size: 14px;
+    height: 35px;
+    width: 250px;
+    background: rgba(255, 255, 255, 0.3);
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    transition: 0.2s;
+    outline: none;
+    padding: 0 10px;
+    letter-spacing: 1px;
+}
+
+.login-box .input-box > input:focus {
+    border: 1px solid rgba(255, 255, 255, 0.8);
+}
+
+.login-box .btn-box {
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+}
+
+.login-box .btn-box > a {
+    font-size: 13px;
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.9);
+    transition: 0.2s;
+    width: 250px;
+    text-align: end;
+}
+.login-box .btn-box >a:hover {
+    color: rgba(255, 255, 255, 1);
+}
+
+.login-box .btn-box > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: start;
+    margin-top: 20px;
+}
+
+.login-box .btn-box > div >button {
+    width: 120px;
+    height: 35px;
+    border: 1px solid rgba(197, 81, 58, 0.8);
+    background: rgba(197, 81, 58, 0.8);
+    color: rgba(255, 255, 255, 0.9);
+    border-radius: 5px;
+    transition: 0.2s;
+}
+
+.login-box .btn-box > div >button:nth-of-type(2) {
+    margin-left: 10px;
+}
+
+.login-box .btn-box > div >button:hover {
+    border: 1px solid rgba(248, 108, 76, 0.8);
+    background: rgba(248, 108, 76, 0.5);
 }
