--- a/templates/index.html
+++ b/templates/index.html
@@ -24,28 +24,46 @@
     <p><a href="https://github.com/wang2653/Building-an-Intelligent-Job-Scheduler-for-Optimized-Request-Assignment">Learn more</a></p>
     </section>
 
+    <section class="advantage-container">
+        <h2>Our Advantages</h2>
+        <section class="advantage">
+            <div>
+                <img src="../static/adv_img1.jpeg" alt="Efficiency in Resource Allocation">
+                <p>Efficiency in Resource Allocation</p>
+            </div>
+            <div>
+                <img src="../static/adv_img2.jpeg" alt="Reduction in Waiting Times">
+                <p>Reduction in Waiting Times</p>
+            </div>
+            <div>
+                <img src="../static/adv_img3.jpeg" alt="User-Friendly Interface">
+                <p>User-Friendly Interface</p>
+            </div>
+        </section>
+    </section>
+
     <div class="demo-container">
-    <section class="demo demo1">
-    <img src="../static/bg2.jpg" alt="Hospital Image">
-    <div class="demo_message">
-    <h2>Demo</h2>
-    <p>Deep RL Model <br> Your gateway to seamless patient management</p>
-    </div>
-    </section>
-    <section class="demo demo2">
-        <img src="../static/bg2.jpg" alt="Hospital Image">
-        <div class="demo_message">
-        <h2>Demo2</h2>
-        <p>Deep RL Model <br> Your gateway to seamless patient management</p>
-        </div>
-    </section>
-    <section class="demo demo3">
-        <img src="../static/bg2.jpg" alt="Hospital Image">
-        <div class="demo_message">
-        <h2>Demo3</h2>
-        <p>Deep RL Model <br> Your gateway to seamless patient management</p>
-        </div>
-    </section>
+        <section class="demo demo1">
+            <img src="../static/bg2.jpg" alt="Hospital Image">
+            <div class="demo_message">
+                <h2>Description 1</h2>
+                <p>Deep RL Model <br> Your gateway to seamless patient management</p>
+            </div>
+        </section>
+        <section class="demo demo2">
+            <img src="../static/bg2.jpg" alt="Hospital Image">
+            <div class="demo_message">
+                <h2>Description 2</h2>
+                <p>Deep RL Model <br> Your gateway to seamless patient management</p>
+            </div>
+        </section>
+        <section class="demo demo3">
+            <img src="../static/bg2.jpg" alt="Hospital Image">
+            <div class="demo_message">
+                <h2>Description 3</h2>
+                <p>Deep RL Model <br> Your gateway to seamless patient management</p>
+            </div>
+        </section>
     </div>
 
     <section id="contact" class="contact">
