--- a/templates/login.html
+++ b/templates/login.html
@@ -9,21 +9,23 @@
 <body class="login-body">
     <div class="login-box">
         <h2>Login</h2>
-        <div class="input-box">
-            <label>Account</label>
-            <input type="text">
-        </div>
-        <div class="input-box">
-            <label>Password</label>
-            <input type="password">
-        </div>
-        <div class="btn-box">
-            <a href="#">Forget Password?</a>
-            <div>
-                <button>Sign In</button>
-                <button>Sign Up</button>
+        <form method="post">
+            <div class="input-box">
+                <label>Account</label>
+                <input type="text" name="username" required>
             </div>
-        </div>
+            <div class="input-box">
+                <label>Password</label>
+                <input type="password" name="password" required>
+            </div>
+            <div class="btn-box">
+                <a href="#">Forget Password?</a>
+                <div>
+                    <button>Sign In</button>
+                    <button>Sign Up</button>
+                </div>
+            </div>
+        </form>
     </div>
 </body>
 </html>
