--- a/static/style.css
+++ b/static/style.css
@@ -256,7 +256,7 @@ footer {
 /* Sidebar styling */
 .sidebar {
     width: 250px;
-    background-color: #f4f4f4;
+    background-color: #3974a8;
     border-right: 1px solid #ccc;
     padding: 20px;
 }
@@ -266,7 +266,7 @@ footer {
     font-size: 1.2rem;
 }
 
-.sidebar button {
+.sidebar button, input {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
@@ -278,6 +278,37 @@ footer {
 
 .sidebar button:hover {
     background-color: #e9e9e9;
+}
+
+.panel-selection {
+    display: flex;
+    justify-content: center;
+    background-color: #007bff;
+    padding: 10px 0;
+    margin-bottom: 20px;
+}
+
+.panel-selection a {
+    text-decoration: none;
+    padding: 10px 20px;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    border: 2px solid transparent;
+    transition: background 0.3s, border 0.3s;
+}
+
+.panel-selection a:hover {
+    background-color: #0056b3;
+}
+
+.panel {
+    display: none;
+}
+
+#doctor:target ~ .doctor-panel,
+#patient:target ~ .patient-panel {
+    display: block;
 }
 
 /* Main content area (right side) */
