--- a/templates/index.html
+++ b/templates/index.html
@@ -64,6 +64,13 @@
                 <p>Deep RL Model <br> Your gateway to seamless patient management</p>
             </div>
         </section>
+        <section class="demo demo4">
+            <img src="../static/bg2.jpg" alt="Hospital Image">
+            <div class="demo_message">
+                <h2>Description 4</h2>
+                <p>Deep RL Model <br> Your gateway to seamless patient management</p>
+            </div>
+        </section>
     </div>
 
     <section id="contact" class="contact">
